--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./Assets/styles/index.css" />
+    <link rel="icon" type="image/x-icon" href="./Assets/images/wEb_site.jpg" />
+
     <title>Home</title>
   </head>
   <body>
